# explore_python

./: README.md  pyproject.toml  terms_estimate.py
chudnovsky/: pi_gist.py
concurrent/: .gitignore  README.md  app_context.py  log2table.awk  perfects.py  perfects_driver-py314a6-fed41.out  perfects_driver.out  perfects_driver.sh  pyproject.toml  worker.py
jupyter/: cont_fracs.ipynb  pil_img.ipynb  sinha_saha.ipynb
jupyter/sympy/: bprp-a_secret_for_evaluating.ipynb  bprp-help...least_k.ipynb  bprp-helping_you_with_integ.ipynb  bprp-how..lim_inf_over_inf.ipynb  bprp-limit_with...multivariable.ipynb  cached_factorial.py  cont_fracs.ipynb  factorial.ipynb  factorial.py  mind_your_decisions.ipynb  pi_1000000.py  sinha_saha.ipynb  sinha_saha.py  sinha_saha_py.py  yt-bprp-a_secret_for_evaluating.ipynb  yt-bprp-help...least_k.ipynb  yt-bprp-helping_you_with_integ.ipynb  yt-bprp-how..lim_inf_over_inf.ipynb  yt-bprp-limit_with...multivariable.ipynb  yt-bprp-misc.ipynb  yt-mind_your_decisions.ipynb
tests/: conftest.py
tests/funcs/: test_inner.py
tests/path/: conftest.py  test_path_manip_perf.py
tests/sympy/: conftest.py  test_alg_solve.py  test_algebra.py  test_calculus.py
