[project]
name = "explore_python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.1.1"]

[tool.pdm.scripts]
test.cmd = "pytest"
