[project]
name = "explore_python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
dependencies = [
    "gmpy2>=2.2.1",
    "mpmath[gmpy2]>=1.3.0",
    "numpy>=2.1.1",
    "matplotlib>=3.9.2",
    "sympy>=1.13.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.3.1",
    "pytest>=8.3.3",
    "tabulate>=0.9.0",
    "ipykernel>=6.29.5",
]

[tool.pdm.scripts]
clean.shell = "find . -type d -name __pycache__ -exec rm -fr {} \\;;for d in ${TO_DEL};do echo $d;rm -fr $d;done"
clean.env = { TO_DEL = "build .coverage coverage.xml log .mypy_cache .pdm-build __pycache__ .pytest_cache src/qwirkle.egg-info .tox dist src/build" }
clean.help = "Clean environment"
create.shell = "pdm venv remove -y in-project; pdm install"

bbp1000 = "python -m chudnovsky.pi_gist -b 1000"
chud1000 = "python -m chudnovsky.pi_gist -c 1000"

test.cmd = "pytest"
