[project]
name = "concurrent"
version = "0.1.0"
description = "concurrency experiments"
authors = [
    {name = "Kevin McWhirter", email = "klmcw@yahoo.com"},
]
dependencies = []
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
create.shell = "pdm venv create -f $HOME/.local/bin/python3.14"
create.help = "Create the .venv"

perfects.shell = "./perfects_driver.sh"
